# backend/src/main/kotlin/dev/dres/api/rest/types/evaluation/ApiAnswer.kt
@@ -2,9 +2,10 @@ package dev.dres.api.rest.types.evaluation
 
 import dev.dres.api.rest.types.collection.ApiMediaItem
 import dev.dres.data.model.submissions.Answer
+import dev.dres.data.model.submissions.AnswerType
 
 data class ApiAnswer(
-    val type: ApiAnswerType,
+    override val type: AnswerType,
     override val item: ApiMediaItem?,
     override val text: String?,
     override val start: Long?,
